--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -269,7 +269,7 @@ text-shadow: 0.5px 0 #181111;
    
 }
 #reasons_why{
-    padding-top: 70px;
+    padding-top: 0;
     margin:0 10px;
     text-align: justify;
 }
