--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -736,6 +736,21 @@ text-shadow: 0.5px 0 #181111;
     --row-height: 200px;
 
 }
+/* Photovoltaic page*/
+
+.whatIs-col img{
+    width: 70%;
+    height:290px;
+ }
+
+#Benefits img{
+    width: 70%;
+    height:290px;
+ }
+ #CostsOfInstalation img{
+    width: 70%;
+    height:290px;
+ }}
 
 /* Contact page*/
 
@@ -794,19 +809,6 @@ text-shadow: 0.5px 0 #181111;
     
 }
 
-.whatIs-col img{
-    width: 80%;
-    height:290px;
- }
-
-#Benefits img{
-    width: 80%;
-    height:290px;
- }
- #CostsOfInstalation img{
-    width: 80%;
-    height:290px;
- }}
 @media (max-width:600px){
 
     header{
